# SlicerDevelopmentToolbox

./: CMakeLists.txt  SlicerDevelopmentToolbox.py
Resources/Icons/: SlicerDevelopmentToolbox_LICENSE
Resources/UI/: FormsDialog.ui  TextInformationRequestDialog.ui
SlicerDevelopmentToolboxUtils/: buttons.py  decorators.py  events.py  exceptions.py  helpers.py  icons.py  mixins.py  widgets.py
SlicerDevelopmentToolboxUtils/forms/: FormGenerator.py  FormGeneratorFactory.py  FormsDialog.py  JSONFormGenerator.py
SlicerDevelopmentToolboxUtils/module/: base.py  logic.py  plugin.py  session.py  step.py
Testing/: SlicerDevelopmentToolboxTests.py
doc/: Makefile  SlicerDevelopmentToolbox.puml  SlicerDevelopmentToolboxUtils.module.rst  SlicerDevelopmentToolboxUtils.rst  conf.py  index.md  index.rst  license.rst  make.bat  modules.rst  requirements.txt
doc/data/: 1.3.6.1.4.1.43046.3.330964839400343291362242315939623549555  XMLBasedInformationWatchBoxTest.xml
